Ajout de l'introduction

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 		<title>Introduction au BDD</title>
 
-		<meta name="description" content="Introduction au BDD">
-		<meta name="author" content="Étienne Besson">
+		<meta name="description" content="Une présentation au BDD">
+		<meta name="author" content="Etienne BESSON">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/beige.css" id="theme">
+		<link rel="stylesheet" href="css/theme/default.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -40,22 +40,138 @@
 				<section>
 					<h1>Introduction au BDD</h1>
 					<p>
-						<small>Par<a href=""> Etienne Besson</a></small>
+						<small>Par <a href="">Etienne BESSON</a></small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
-
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+					<h2>Agenda</h2>
+					<span>
+						<ul>
+							<li>Introduction</li>
+						</ul>
+					</span>
 				</section>
+				<section><h1>Introduction</h1></section>
+				<section>
+					<h2>Ce que n'est pas BDD</h2>
+					<span>
+						<ul>
+							<li>BDD n'est pas nécessairement un outil d'automatisation</li>
+							<li>BDD n'est pas associée aux tests bout en bout</li>
+							<li>BDD n'est pas associée aux tests sélénium</li>
+							<li>BDD n'est pas un outil</li>
+						</ul>
+					</span>				
+				</section>
+				<section>
+					<section>
+						<span>
+							<h2>Comment se passe souvent les projets informatiques...<h2>
+						</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_01.jpg" height="414px" />
+						</div>
+						<span>Ce que le client a expliqué</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_02.jpg" height="414px" />
+						</div>
+						<span>Ce qu'a compris le chef de projet</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_03.jpg" height="414px" />
+						</div>
+						<span>Ce que l'analyste a conçu</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_04.jpg" height="414px" />
+						</div>
+						<span>Ce que le développeur a fait</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_05.jpg" height="414px" />
+						</div>
+						<span>Ce que les béta-testeurs ont reçu</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_06.jpg" height="414px" />
+						</div>
+						<span>Comment les commerciaux l'ont décrit</span>
+					</section>									
+					<section>
+						<div>
+							<img src="img/cell_07.jpg" height="414px" />
+						</div>
+						<span>Comment le projet a été documenté</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_08.jpg" height="414px" />
+						</div>
+						<span>Ce que la production a installé</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_09.jpg" height="414px" />
+						</div>
+						<span>Ce que le client a été facturé</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_10.jpg" height="414px" />
+						</div>
+						<span>Ce que l'assistance a apporté</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_11.jpg" height="414px" />
+						</div>
+						<span>Ce que le marketing a vendu</span>
+					</section>
+					<section>
+						<div>
+							<img src="img/cell_13.jpg" height="414px" />
+						</div>
+						<span>Ce dont le client avait vraiment besoin</span>
+					</section>
+				</section>	
+				<section>
+					<section>
+						<span>
+							<h2>Les faces cachées de la communication<h2>
+						</span>
+					</section>
+					<section>
+						<span>
+							<h2>L'ambiguité</h2>
+							Il a trouvé un avocat
+						</span>
+					</section>
+					<section>
+						<span>
+							<h2>Illusion</h2>
+						</span>
+					</section>
+					<section>
+						<span>
+							<h2>Amphibologie</h2>
+						</span>
+						<span>
 
+Définition Wikipedia : L'amphibologie est également une figure de style qui consiste en une ambiguïté grammaticale qui peut donner lieu à diverses interprétations d'une même phrase.
+
+"Elle est sortie en pleurant du café"
+						</span>
+					</section>
+				</section>
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
@@ -89,16 +205,19 @@
 				</section>
 
 				<section>
-					<h2>Point of View</h2>
+					<h2>Slides</h2>
 					<p>
-						Press <strong>ESC</strong> to enter the slide overview. Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
+						Not a coder? No problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slid.es" target="_blank">http://slid.es</a>.
 					</p>
 				</section>
 
 				<section>
-					<h2>rvl.io</h2>
+					<h2>Point of View</h2>
 					<p>
-						If you don't like writing slides in HTML you can use the online editor <a href="http://www.rvl.io" target="_blank">rvl.io</a>.
+						Press <strong>ESC</strong> to enter the slide overview.
+					</p>
+					<p>
+						Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
 					</p>
 				</section>
 
@@ -134,12 +253,14 @@
 
 						For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
 
-							<section data-markdown>
-							  ## Markdown support
+						```
+						<section data-markdown>
+						  ## Markdown support
 
-							  For those of you who like that sort of thing.
-							  Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-							</section>
+						  For those of you who like that sort of thing.
+						  Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
+						</section>
+						```
 					</script>
 				</section>
 
@@ -207,7 +328,8 @@
 					<p>
 						Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
 					</p>
-					<pre><code contenteditable style="font-size: 18px; margin-top: 20px;">Reveal.addEventListener( 'customevent', function() {
+					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
+Reveal.addEventListener( 'customevent', function() {
 	console.log( '"customevent" has fired' );
 } );
 					</code></pre>
@@ -217,17 +339,17 @@
 					<h2>Clever Quotes</h2>
 					<p>
 						These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						The nice thing about standards is that there are so many to choose from</q> and block:
+						&ldquo;The nice thing about standards is that there are so many to choose from&rdquo;</q> and block:
 					</p>
 					<blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-						reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.
+						&ldquo;For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
+						reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.&rdquo;
 					</blockquote>
 				</section>
 
 				<section>
 					<h2>Pretty Code</h2>
-					<pre><code contenteditable>
+					<pre><code data-trim contenteditable>
 function linkify( selector ) {
   if( supports3DTransforms ) {
 
@@ -309,28 +431,10 @@ function linkify( selector ) {
 				<section>
 					<h2>Stellar Links</h2>
 					<ul>
+						<li><a href="http://slid.es">Try the online editor</a></li>
 						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://hakim.se/projects/reveal-js">Leave feedback on my site</a></li>
 						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
 					</ul>
-				</section>
-
-				<section>
-					<h2>It's free</h2>
-					<p>
-						reveal.js and <a href="http://www.rvl.io">rvl.io</a> are entirely free but if you'd like to support the projects you can donate below.
-						Donations will go towards hosting and domain costs.
-					</p>
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-						<input type="hidden" name="cmd" value="_donations">
-						<input type="hidden" name="business" value="hakim.elhattab@gmail.com">
-						<input type="hidden" name="lc" value="US">
-						<input type="hidden" name="item_name" value="reveal.js / rvl.io">
-						<input type="hidden" name="no_note" value="0">
-						<input type="hidden" name="currency_code" value="USD">
-						<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
-						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-					</form>
 				</section>
 
 				<section>
@@ -356,12 +460,12 @@ function linkify( selector ) {
 				center: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'linear', // default/cube/page/concave/zoom/linear/fade/none
+				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
 					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/showdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
