--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<section>
 					<section>
 						<span>
-							<h2>Comment se passe souvent les projets informatiques...<h2>
+							<h2>Comment se passent souvent les projets informatiques...<h2>
 						</span>
 					</section>
 					<section>
