Migration vers AngularJS 1.2.7

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,8 @@
 		</header>
         <section class="container" ng-view="">
         </section>
-	    <script src="js/libs/angular-1.0.3.js"></script>
+	    <script src="js/libs/angular.min.js"></script>
+	    <script src="js/libs/angular-route.min.js"></script>
         <script src="js/libs/angular-locale_fr-fr.js"></script>
         <script src="js/app/application.js"></script>
         <script src="js/app/services.js"></script>
