--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@
         <script src="js/libs/angular-locale_fr-fr.js"></script>
         <script src="js/app/application.js"></script>
         <script src="js/app/services.js"></script>
-        <script src="js/app/booksController.js"></script>
+        <script src="js/app/bookController.js"></script>
         <script src="js/app/bookFormController.js"></script>
 	</body>
 </html>
